--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -3,3 +3,88 @@
 	margin: 0 auto;
 	position: relative;
 }
+
+.photo {
+	background: #ccc;
+	margin-bottom: 20px;
+	padding: 20px;
+	border-radius: 10px;
+	box-sizing: border-box;
+
+	.window {
+		float: left;
+		width: 200px;
+		height: 150px;
+		overflow: hidden;
+		margin-right: 20px;
+		background: #aaa;
+
+		img {
+			width: 100%
+		}
+	}
+	
+	.flickr {
+		margin-left: 20px;
+	}
+	
+	.date {
+		margin: 5px 0;
+	}
+	
+
+	h3 {
+		width: calc(100% - 220px);
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		margin-bottom: 0;
+		font-size: 1.5em;
+	}
+
+	&.chosen {
+		.author {
+			display: inline-block;
+		}
+		.date {
+			display: inline-block;
+		}
+
+		.back-link {
+			float: right;
+		}
+
+		h2 {
+			display: inline-block;
+			margin-top: 0;
+		}
+
+
+		.tags {
+			display: inline;
+			list-style: none;
+
+			li {
+				display: inline-block;
+				margin-right: 20px;
+			}
+		}
+	}
+
+	@include clearfix();
+
+	@media screen and (max-width: 480px) {
+		.window {
+			width: 100%;
+			height: 300px;
+		}
+
+		h3 {
+			width: 100%;
+		}
+	}
+
+	@media screen and (min-width: 800px) {
+
+	}
+}
